[package]
name = "urTCP"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "A Rust library for user level TCP stack."

[dependencies]
thiserror = "2.0.14"
tokio = { version = "1.47.1", features = ["macros", "time", "sync", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
tun = { version = "0.8.3", optional = true }

[features]
default = []
tun-backend = ["tun"]

[dev-dependencies]
anyhow = "1.0.0"

